[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Mitos"
version = "0.1.0"
description = "Ibis-based recreation of the OHDSI Circe cohort expression builder."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Egill A. Fridgeirsson", email = "e.fridgeirsson@erasmusmc.nl"}]
dependencies = [
    "ibis-framework>=11.0.0",
    "pydantic>=2.0.0",
    "polars>=1.7.0",
    "packaging>=25.0",
    "pyyaml>=6.0.3",
    "pyarrow>=22.0.0",
    "pyarrow-hotfix>=0.7",
]

[project.optional-dependencies]
duckdb = [
  "ibis-framework[duckdb]>=11.0.0",
  "duckdb>=0.10.3",
]
databricks = [
  "ibis-framework[databricks]>=11.0.0",
]
postgres = [
  "ibis-framework[postgres]>=11.0.0",
  "psycopg[binary]>=3.2.0",
]

[project.scripts]
Mitos = "mitos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "ipdb>=0.13.13",
    "ipython>=8.37.0",
    "pytest>=9.0.1",
]
